Gap Issue

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: flex-start;
 
-  gap: 60px;
+  gap: 10px;
   flex-shrink: 0;
   background: var(--Button, #000);
 }
